# cockroach-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  seed_accounts.sql
proto/: plinko.proto
src/: main.rs  plinko_logic.rs  proto_mod.rs
src/db/: cockroach.rs  mod.rs  scylla.rs
