[package]
name = "casino-backend"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[dependencies]
tokio   = { version = "1.37", features = ["full"] }
prost          = "0.12"      # ↙ protobuf code needs this crate
prost-types    = "0.12"
tonic   = { version = "0.10", features = ["transport", "prost"] }
axum    = "0.7"
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
uuid    = { version = "1", features = ["v4"] }
scylla  = "0.5"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros"] }
dotenvy = "0.15"
anyhow  = "1"
thiserror = "1"
rand = "0.8"


[build-dependencies]
tonic-build = "0.10"
